make next project button animate on hover, fix alignment of pagination w/ footer elements

--- a/app/assets/stylesheets/components/_work-grid.scss
+++ b/app/assets/stylesheets/components/_work-grid.scss
@@ -47,7 +47,7 @@
       @extend %small-caps;
     }
     h3 {
-      transition: opacity .6s $cubic-ease2;
+      transition: opacity .4s $cubic-ease1;
       opacity: 0;
     }
 
