--- a/app/assets/stylesheets/pages/_projects.scss
+++ b/app/assets/stylesheets/pages/_projects.scss
@@ -235,7 +235,6 @@
   ul {
     @extend %clearfix;
     margin: 130px 0 -30px 0;
-    padding-right: 25px;
 
     &:after {
       content: ' ';
@@ -268,7 +267,7 @@
       }
     }
     li.next a:hover {
-      margin-right: -6px;
+      margin-left: 6px;
     }
 
   }
